--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
       </div>
       <div id="content-holder" class="order-2 order-sm-1 order-lg-3">
         <div id="canvas-holder" class="d-flex justify-content-center mx-lg-5 mx-0" >   
-          <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute shown" src="../images/misc/title card.jpg">
+          <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute hidden" src="../images/misc/title card.jpg">
           <div id="replay-holder" class="d-flex w-100 h-100 justify-content-center align-items-center zindex-tooltip position-absolute">
             <img id="replay" class="hidden" src="../images/icons/button-replay.png">
           </div>
