--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,14 +52,14 @@ h2 span {
 
 h3 {
   font-family: "Helvetica Condensed" !important;
-  font-size: 1.6rem !important;
+  font-size: 1.3rem !important;
   line-height: 1.5em !important;
 
   color: #231f20 !important;
 }
 
 p {
-  font-size: 1.2rem !important;
+  font-size: 1.0rem !important;
 }
 
 small {
@@ -88,7 +88,7 @@ small {
 
 #canvas-holder {
   position: relative;
-  height: inherit;
+  height: calc(100% * (720/1280));
 }
 
 #replay {
@@ -193,7 +193,7 @@ button {
 }
 
 #exports {
-  max-width: 1420px;
+  max-width: 1136px;
 }
 
 #submission {
@@ -217,6 +217,7 @@ button {
 .hidden {
   pointer-events: none !important;
   opacity: 0 !important;
+  /*display: none !important;*/
 }
 
 .shown {
