--- a/views/index.html
+++ b/views/index.html
@@ -138,7 +138,8 @@
           </div>
       </div>
       
-      <div id="footer" class="footer  container-fluid d-flex flex-column justify-content-center align-items-center mt-1 mt-lg-5 order-5" style="bottom: 0;">
+      <div id="footerChecker" class="d-flex order-5"></div>
+      <div id="footer" class="footer  container-fluid d-flex flex-column justify-content-center align-items-center mt-1 mt-lg-5 order-6" style="bottom: 0;">
         <div id="hbo" class="mt-0"> 
           <img src="../images/icons/hbo-logo.png" class="my-4" width="50" height="auto">
         </div>
@@ -151,7 +152,7 @@
         </div>
   
       </div>
-
+      
     </div>
     
   </body>
