--- a/views/index.html
+++ b/views/index.html
@@ -52,12 +52,12 @@
           <h3 class="text-center mt-1 m-sm-0 mx-5 pt-2 pt-sm-1">Don’t just watch Silicon Valley, BE the Valley.</h3>
           <p class="text-center mb-1 px-4 pt-0 pt-sm-1">Celebrate the final season with this custom title sequence generator. Add your name (or whatever you want... within reason) and share your creation by downloading or sharing directly to Facebook or Twitter.</p>
       </div>
-      <div id="content-holder" class="order-2 order-sm-1 order-lg-3" style="max-width: 1024px">
-        <div id="canvas-holder" class="d-flex justify-content-center mx-lg-5 mx-0" style="height: inherit">   
-          <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute" src="../images/misc/title card.jpg">
+      <div id="content-holder" class="d-flex justify-content-center mx-lg-5 mx-0 order-2 order-sm-1 order-lg-3" style="max-width: 1024px">
+          <div id="canvas-holder"></div>
           <div id="replay-holder" class="d-flex w-100 h-100 justify-content-center align-items-center zindex-tooltip position-absolute">
             <img id="replay" class="hidden" src="../images/icons/button-replay.png">
           </div>
+          <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute" style="" src="../images/misc/title card.jpg">
           <div id="loading-holder" class="d-flex w-100 h-100 flex-column justify-content-center align-items-center zindex-tooltip position-absolute hidden">
             <img id="loading" class="" width="80" src="../images/icons/loading.gif"><div id="percentage" class="text-light font-weight-bold pt-1" style="font-size:1.2rem">37%</div>
           </div>
@@ -65,7 +65,7 @@
           <!--<div id="progress-bar" class="d-flex w-100 h-100 justify-content-start align-items-end zindex-tooltip position-absolute">
             <div id="progress" class="text-center bg-success text-white pt-3 pb-2 shown" height="5">37%</div>
           </div>-->
-        </div>
+     
       </div>
       <!-- p5 canvas goes here -->
 
