--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>BE THE VALLEY</title>
-    <meta name="description" content="[Your name here] in the intro for Silicon Valley">
+    <title>Be The Valley</title>
+    <meta name="description" content="Celebrate the final season with this custom title sequence generator.">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
