--- a/views/index.html
+++ b/views/index.html
@@ -117,7 +117,7 @@
             <div id="sharing" class="has-border col-10 col-sm-5 col-md-4 col-lg-4 flex-fill justify-content-center py-4 px-4 px-sm-2 d-flex ">
               <div class="col-12 my-auto mx-0 align-self-center">
                 <h2 class="text-center text-lg-left">Share</h2>
-                <input id="shareurl" name="shareURL" type="text" class="form-control pt-2" autocomplete="off">
+                <input id="shareurl" name="shareURL" type="text" class="form-control" style="padding-top: 13px" autocomplete="off">
                 <div class="d-flex flex-fill justify-content-center justify-content-lg-start mt-3">
                   <button id="shareTwitter" class="border-0 p-0 bg-transparent">
                     <img src="../images/icons/twitter.png" class="socialicon mr-1" width="50" height="50">
