--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
           <div id="replay-holder" class="d-flex w-100 h-100 justify-content-center align-items-center zindex-tooltip position-absolute">
             <img id="replay" class="hidden" src="../images/icons/button-replay.png">
           </div>
-          <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute" style="" src="../images/misc/title card.jpg">
+          <img id="titlecard" class="w-100 h-auto p-0 zindex-popover position-absolute" src="../images/misc/title card.jpg">
           <div id="loading-holder" class="d-flex w-100 h-100 flex-column justify-content-center align-items-center zindex-tooltip position-absolute hidden">
             <img id="loading" class="" width="80" src="../images/icons/loading.gif"><div id="percentage" class="text-light font-weight-bold pt-1" style="font-size:1.2rem">37%</div>
           </div>
