--- a/views/index.html
+++ b/views/index.html
@@ -13,9 +13,9 @@
   <head>
     <title>Be The Valley</title>
     <meta name="description" content="Celebrate the final season with this custom title sequence generator.">
-    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:image" content="<%= ../images/misc/title card.jpg %>">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
