updated meta tag og:image

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Celebrate the final season with this custom title sequence generator.">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:image" content="<%= ../images/misc/title_card.jpg %>">
+    <meta property="og:image" content="../images/misc/title_card.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
