updated share dialog copy

--- a/views/index.html
+++ b/views/index.html
@@ -18,8 +18,8 @@
     <meta property="og:image" content="https://social-sharing-install.s3-us-west-2.amazonaws.com/tec-demo/static/title_card.jpg">
     <meta property="og:url" content="http://hbo-bethevalley.us-west-2.elasticbeanstalk.com">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="HBO - Be The Valley">
-    <meta property="og:description" content="Celebrate the final season with this custom title sequence generator. Add your name (or whatever you want... within reason) and share your creation by downloading or sharing directly to Facebook or Twitter.">
+    <meta property="og:title" content="Be The Valley">
+    <meta property="og:description" content="Celebrate the final season with this custom title sequence generator.">
     <meta property="og:app_id" content="2804751129557151">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
