--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
       <div id="header" class="mt-0 mt-lg-3 p-4 p-sm-3 p-lg-2 w-50 order-1 order-sm-2 order-lg-1" style="max-width: 576px">
         <img src="../images/misc/logo.png" class="img-fluid">
       </div>
-      <div id="bodytext" class="container pt-2 pt-lg-1 pb-0 px-4 py-sm-0 pb-lg-3 w-100 w-sm-75  order-3 order-sm-3 order-lg-2" style="max-width: 1024px">
+      <div id="bodytext" class="container pt-2 pt-lg-1 pb-0 px-4 py-sm-0 pb-lg-3 w-100 w-sm-75  order-3 order-sm-3 order-lg-2" >
           <h3 class="text-center mt-1 m-sm-0 mx-5 pt-2 pt-sm-1">Don’t just watch Silicon Valley, BE the Valley.</h3>
           <p class="text-center mb-1 px-4 pt-0 pt-sm-1">Celebrate the final season with this custom title sequence generator. Add your name (or whatever you want... within reason) and share your creation by downloading or sharing directly to Facebook or Twitter.</p>
       </div>
