possible footer fix?

--- a/views/index.html
+++ b/views/index.html
@@ -50,11 +50,11 @@
   </head>
   
   <body>
-    <div class="d-flex flex-column justify-content-center align-items-center">
+    <div id="pagebody" class="d-flex flex-column justify-content-center align-items-center">
       <div id="header" class="mt-0 mt-lg-3 p-4 p-sm-3 p-lg-2 w-50 order-1 order-sm-2 order-lg-1" style="max-width: 576px">
         <img src="../images/misc/logo.png" class="img-fluid">
       </div>
-      <div id="bodytext" class="container pt-2 pt-lg-1 pb-0 px-4 py-sm-0 pb-lg-3 w-100 w-sm-75  order-3 order-sm-3 order-lg-2" >
+      <div id="bodytext" class="container pt-2 pt-lg-1 pb-0 px-4 py-sm-0 pb-lg-3 w-100 w-sm-75 order-3 order-sm-3 order-lg-2" >
           <h3 class="text-center mt-1 m-sm-0 mx-5 pt-2 pt-sm-1">Don’t just watch Silicon Valley, BE the Valley.</h3>
           <p class="text-center mb-1 px-4 pt-0 pt-sm-1">Celebrate the final season with this custom title sequence generator. Add your name (or whatever you want... within reason) and share your creation by downloading or sharing directly to Facebook or Twitter.</p>
       </div>
@@ -144,7 +144,6 @@
           </div>
       </div>
       
-      <div id="footerChecker" class="d-flex order-5"></div>
       <div id="footer" class="footer  container-fluid d-flex flex-column justify-content-center align-items-center mt-1 mt-lg-5 order-6" style="bottom: 0;">
         <div id="hbo" class="mt-0"> 
           <img src="../images/icons/hbo-logo.png" class="my-4" width="50" height="auto">
