--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,11 @@
     <script src="js/fb-sdk.js"></script>
 
     <script src="js/main.js" defer></script>
+
+
+    <script type="text/javascript">
+      var timerStart = Date.now();
+    </script>
   </head>
   
   <body>
@@ -68,9 +73,6 @@
             <img id="loading" class="" width="80" src="../images/icons/loading.gif"><div id="percentage" class="text-light font-weight-bold pt-1" style="font-size:1.2rem">37%</div>
           </div>
           <video id="video-preview" class="hidden" style="width: 100%; height: 100%; position: absolute; z-index: 9999 !important;" src="" controls></video>
-          <!--<div id="progress-bar" class="d-flex w-100 h-100 justify-content-start align-items-end zindex-tooltip position-absolute">
-            <div id="progress" class="text-center bg-success text-white pt-3 pb-2 shown" height="5">37%</div>
-          </div>-->
      
       </div>
       <!-- p5 canvas goes here -->
@@ -161,5 +163,11 @@
       
     </div>
     
+
+    <script type="text/javascript">
+      $(document).ready(function() {
+          console.log("Time until DOMready: ", (Date.now()-timerStart)/1000);
+      });
+  </script>
   </body>
 </html>
