--- a/views/index.html
+++ b/views/index.html
@@ -147,18 +147,19 @@
       </div>
       
       <div id="footerChecker" class="d-flex order-5"></div>
-      <div id="footer" class="footer  container-fluid d-flex flex-column justify-content-center align-items-center mt-1 mt-lg-5 order-6" style="">
-        <div id="hbo" class="mt-0"> 
-          <img src="../images/icons/hbo-logo.png" class="my-4" width="50" height="auto">
+      <div id="footer-holder" class="d-flex w-100 align-items-end order-6 position-relative" style="height: 150px">
+        <div id="footer" class="footer position-absolute container-fluid d-flex flex-column justify-content-center align-items-center mt-1 mt-lg-5" style="bottom:0">
+          <div id="hbo" class="mt-0"> 
+            <img src="../images/icons/hbo-logo.png" class="my-4" width="50" height="auto">
+          </div>
+          <div id="footercopy" class="container text-center mw-50">
+            <small>© 2019 Home Box Office, Inc. All Rights Reserved.<br>This website may contain mature content.</small>
+          </div>
+          <div id="footerlinks" class="container d-flex justify-content-center text-center w-25 pt-3 mb-4 font-weight-bold">
+              <a class="px-2" href="https://www.hbo.com/privacy-policy" target="_blank">PRIVACY</a>
+              <a class="px-2" href="https://www.hbo.com/terms-of-use" target="_blank">TERMS</a>
+          </div>
         </div>
-        <div id="footercopy" class="container text-center mw-50">
-          <small>© 2019 Home Box Office, Inc. All Rights Reserved.<br>This website may contain mature content.</small>
-        </div>
-        <div id="footerlinks" class="container d-flex justify-content-center text-center w-25 pt-3 mb-4 font-weight-bold">
-            <a class="px-2" href="https://www.hbo.com/privacy-policy" target="_blank">PRIVACY</a>
-            <a class="px-2" href="https://www.hbo.com/terms-of-use" target="_blank">TERMS</a>
-        </div>
-  
       </div>
       
     </div>
