final matte + bg videos (ty latoria!)

--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
   </head>
   
   <body>
-    <div class="d-flex flex-column justify-content-center align-items-center">
+    <div class="d-flex mt-1 flex-column justify-content-center align-items-center">
       <div id="header" class="mt-0 mt-lg-3 p-4 p-sm-3 p-lg-2 w-50 order-1 order-sm-2 order-lg-1" style="max-width: 576px">
         <img src="../images/misc/logo.png" class="img-fluid">
       </div>
