you will wait till load

--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,7 @@
       <!-- p5 canvas goes here -->
 
       <div id="actionables" class="w-100 w-lg-40 pt-3 pt-sm-4 pt-lg-4 pb-5 flex-fill d-flex justify-content-center position-relative order-4 overflow-hidden">
-          <div id="submission" class="d-flex position-absolute justify-content-center w-100 h-auto flex-fill shown">
+          <div id="submission" class="d-flex position-absolute justify-content-center w-100 h-auto flex-fill hidden">
               <div id="namefield" class="px-0 w-100">
                 <form id="nameform" name="nameform">
                           <div class="form-group row mb-2">
