--- a/views/index.html
+++ b/views/index.html
@@ -148,7 +148,7 @@
       
       <div id="footerChecker" class="d-flex order-5"></div>
       <div id="footer-holder" class="d-flex w-100 align-items-end order-6 position-relative" style="height: 150px">
-        <div id="footer" class="footer position-absolute container-fluid d-flex flex-column justify-content-center align-items-center mt-1 mt-lg-5" style="bottom:0">
+        <div id="footer" class="footer position-absolute container-fluid d-flex flex-column justify-content-center align-items-center mt-0" style="bottom:0">
           <div id="hbo" class="mt-0"> 
             <img src="../images/icons/hbo-logo.png" class="my-4" width="50" height="auto">
           </div>
