new videos sync

--- a/views/index.html
+++ b/views/index.html
@@ -118,6 +118,7 @@
                   </div>
                   <div class="m-3 text-center text-lg-left">
                     <button id="dlVideo" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Video<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
+                    <div id="dlVideoIOSNote" class="py-2 px-1 text-center text-black-50 shown" style="font-size: 0.9rem;">Unavailable For IOS </div>
                   </div>
                 </div>
             </div>
