Removed archive videos / Added SEO tags

--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Be The Valley</title>
-    <meta name="description" content="Celebrate the final season with this custom title sequence generator.">
+    <title>Silicon Valley Season 6 Title Sequence Generator | Be The Valley</title>
+    <meta name="description" content="Celebrate the final season of Silicon Valley on HBO by creating your own personalized title sequence. Get creative with it and share on Facebook & Twitter!">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:image" content="https://social-sharing-install.s3-us-west-2.amazonaws.com/tec-demo/static/title_card.jpg">
@@ -35,6 +35,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="canonical" href="https://www.bethevalley.com/"/>
 
     <script src="js/objects.js"></script>
     <script src="js/letters.js"></script>
