Removed stray console logs

--- a/views/index.html
+++ b/views/index.html
@@ -170,7 +170,7 @@
 
     <script type="text/javascript">
       $(document).ready(function() {
-          console.log("Time until DOMready: ", (Date.now()-timerStart)/1000);
+          //console.log("Time until DOMready: ", (Date.now()-timerStart)/1000);
       });
   </script>
   </body>
