--- a/views/index.html
+++ b/views/index.html
@@ -120,7 +120,7 @@
                   </div>
                   <div class="m-3 text-center text-lg-left">
                     <button id="dlVideo" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Video<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
-                    <div id="dlVideoIOSNote" class="py-2 px-1 text-center text-black-50" style="font-size: 0.9rem;">Unavailable for iOS </div>
+                    <div id="dlVideoIOSNote" class="py-2 px-1 text-center text-black-50" style="font-size: 0.9rem;">*Video version only downloadable to desktop or Android devices. We know, iOS users… We know.</div>
                   </div>
                 </div>
             </div>
