--- a/views/index.html
+++ b/views/index.html
@@ -114,14 +114,16 @@
           <div id="exports" class="d-flex justify-content-center flex-fill mb-4 pt-2 row hidden">
             <div id="downloading" class="has-border col-10 col-sm-4 col-lg-5 flex-fill pt-2 pb-4 px-4 pl-sm-4 pr-sm-1 pl-md-4 pr-md-2 pl-lg-5 pr-lg-3">
                 <h2 class="text-center text-lg-left mx-3 mx-lg-3  mb-1">Download your creation</h2>
-                <div class="d-flex flex-fill justify-content-center justify-content-lg-start mt-2 flex-column flex-lg-row pt-2 pt-lg-0">
-                  <div class="m-3 text-center text-lg-left">
-                    <button id="dlPhoto" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Image<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
+                <div class="d-flex flex-fill justify-content-center justify-content-lg-start mt-2 mt-sm-0 flex-column ">
+                  <div class="d-flex flex-fill justify-content-center justify-content-lg-start mt-2 mt-lg-0 flex-column flex-lg-row pt-2 pt-sm-0 pt-lg-0">  
+                    <div class="m-3 m-sm-2 m-lg-3 text-center text-lg-left">
+                      <button id="dlPhoto" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Image<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
+                    </div>
+                    <div class="m-3 m-sm-2 m-lg-3 text-center text-lg-left">
+                      <button id="dlVideo" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Video<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
+                    </div>
                   </div>
-                  <div class="m-3 text-center text-lg-left">
-                    <button id="dlVideo" class="btn rounded-lg dlbtn btn-primary text-uppercase flex-fill mx-auto pt-3 pb-2">Video<img src="../images/icons/download.png" class="ml-2 mb-1" width="20" height="19"><div></div></button>
-                    <div id="dlVideoIOSNote" class="py-2 px-1 text-center text-black-50" style="font-size: 0.9rem;">*Video version only downloadable to desktop or Android devices. We know, iOS users… We know.</div>
-                  </div>
+                  <div id="dlVideoIOSNote" class="py-3 my-2 my-sm-1 my-lg-0 px-1 py-sm-0 px-lg-2 text-center text-black-50" style="font-size: 0.9rem;">*Video version only downloadable to desktop or Android devices. We know, iOS users… We know.</div>
                 </div>
             </div>
 
