Added in google analytics

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WT9F8P8');</script>
+
     <title>Silicon Valley Season 6 Title Sequence Generator | Be The Valley</title>
     <meta name="description" content="Celebrate the final season of Silicon Valley on HBO by creating your own personalized title sequence. Get creative with it and share on Facebook & Twitter!">
     <meta charset="utf-8">
@@ -57,6 +63,9 @@
   </head>
   
   <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WT9F8P8"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <div class="d-flex flex-column justify-content-center align-items-center">
       <div id="header" class="mt-0 mt-lg-3 p-4 p-sm-3 p-lg-2 w-50 order-1 order-sm-2 order-lg-1" style="max-width: 576px">
         <img src="../images/misc/logo.png" class="img-fluid">
