Added default favicon

--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="canonical" href="https://www.bethevalley.com/"/>
+    <link rel="icon" 
+      type="image/png" 
+      href="images/icons/favicon.png"">
 
     <script src="js/objects.js"></script>
     <script src="js/letters.js"></script>
