--- a/views/index.html
+++ b/views/index.html
@@ -86,7 +86,7 @@
           <div id="loading-holder" class="d-flex w-100 h-100 flex-column justify-content-center align-items-center zindex-tooltip position-absolute hidden">
             <img id="loading" class="" width="80" src="../images/icons/loading.gif"><div id="percentage" class="text-light font-weight-bold pt-1" style="font-size:1.2rem">37%</div>
           </div>
-          <video id="video-preview" class="hidden" style="width: 100%; height: 100%; position: absolute; z-index: 9999 !important;" src="" controls></video>
+          <video id="video-preview" class="hidden" style="width: 100%; height: auto; position: absolute; z-index: 9999 !important;" src="" controls></video>
      
       </div>
       <!-- p5 canvas goes here -->
